# spgate

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  link_stat.h  main.cpp  rlinifile.cpp  rlsocket.h  run_build.sh  run_install.sh  spgate.pro  start
app/: BusGate.cpp  BusGate.hpp  CMakeLists.txt  FeProcessorM4Net.cpp  FeProcessorM4Net.hpp  FeProcessorSpNet.cpp  FeProcessorSpNet.hpp  SerialPortRl.cpp  SpGate.cpp  SpGate.hpp  TagAccessorSl.hpp
app/bus/: Bus.hpp  GateDefs.hpp  RegAccessor.hpp
app/bus/modbus/: ModbusBuffer.hpp  ModbusClient.cpp  ModbusServer.cpp  ModbusServer.hpp
app/bus/rsbus/: RsBus.hpp  RsBusClient.cpp  RsBusClient.hpp  RsBusCodec.cpp  RsBusCodec.hpp  RsBusDefs.hpp  RsBusFsm.cpp  RsBusFsm.hpp  RsBusRx.cpp  RsBusRx.hpp
app/bus/spbus/: SpBusClient.cpp  SpBusClient.hpp  SpBusCodec.cpp  SpBusDefs.hpp  SpBusRx.cpp  SpBusServer.cpp  SpBusServer.hpp
app/gates/: GateDefs.hpp  GateFsm.cpp  GateFsm.hpp  GateM4Bus.cpp  GateM4Bus.hpp  GateSpBus.cpp  GateSpBus.hpp  GateStorage.cpp  GateStorage.hpp  ServerSpBus.cpp  ServerSpBus.hpp  SpBusCodec.cpp  SpBusCodec.hpp  SpBusRx.cpp  SpBusRx.hpp
app/interfaces/: FeProcessor.hpp  Gate.hpp  Link.hpp  LinkAcceptor.hpp  Server.hpp  TagAccessor.hpp
app/modbus/: ModbusBuffer.hpp  ModbusClient.cpp  ModbusClient.hpp  ModbusDefs.hpp  ModbusServer.cpp  ModbusServer.hpp
app/serial/: SerialPort.hpp
app/shm/: TagAccessorSl.cpp
app/sm/: Client.hpp  ClientFsm.cpp  ClientFsm.hpp  ServerFsm.cpp  ServerFsm.hpp
app/sockets/: Link.hpp  LinkAcceptor.hpp  LinkAcceptorRl.cpp  LinkAcceptorRl.hpp  LinkRl.hpp
app/types/: DataRequest.hpp  DataRespond.hpp  ParamsDefs.hpp  SerialPortSetup.hpp  TagType.hpp
app/utils/: Buffer.hpp  Logger.cpp  Logger.hpp  ParamParser.cpp  ParamParser.hpp  TickUtils.hpp  Timer.hpp  Utils.cpp  Utils.hpp  WrapBuffer.hpp
cfg/: default.ini  default_rsbus.ini  default_ut.ini  spgate
docs/: dev_manual.txt  spgateSpecs.xlsx  tz_template.txt  user_manual.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  SpGateConfig.hpp.in  app.pri  spgate_main.cpp
src/app/bg/: BusGate.cpp  BusGate.hpp  CMakeLists.txt  bg.pro  spgate_main.cpp
src/app/bg/bus/: LinkLocker.hpp  RegAccessor.cpp
src/app/bg/bus/modbus/: ModbusClient.cpp  ModbusDefs.hpp  ModbusServer.cpp  ModbusServer.hpp
src/app/bg/bus/rsbus/: RsBus.hpp  RsBusClient.cpp  RsBusClient.hpp  RsBusCodec.cpp  RsBusCodec.hpp  RsBusDefs.hpp  RsBusFsm.cpp  RsBusFsm.hpp  RsBusRx.cpp  RsBusRx.hpp  RsBusServer.cpp  RsBusServer.hpp
src/app/bg/bus/spbus/: SpBusClient.cpp  SpBusClient.hpp  SpBusCodec.hpp  SpBusDefs.hpp  SpBusRx.cpp  SpBusRx.hpp  SpBusServer.cpp  SpBusServer.hpp
src/app/bg/cli/: Cli.cpp  Cli.hpp  CmdProcessor.hpp  TelnetDefs.hpp  TelnetPrinter.cpp  TelnetPrinter.hpp
src/app/bg/cli/cmds/: CmdArgLogLevel.cpp  CmdArgLogLevel.hpp  CmdArgStatsType.cpp  CmdInfo.cpp  CmdInfo.hpp  CmdLog.cpp  CmdParamParser.cpp  CmdParamParser.hpp  CmdShutdown.cpp  CmdStats.cpp  CmdStats.hpp  CmdStatsFormater.cpp
src/app/common/: BusGate.cpp  BusGate.hpp  CMakeLists.txt  common.pro
src/app/common/bus/: BusStats.hpp  GateStorage.hpp
src/app/common/bus/modbus/: ModbusClient.cpp  ModbusClient.hpp  ModbusDefs.hpp  ModbusServer.cpp
src/app/common/bus/rsbus/: RsBusClient.cpp  RsBusCodec.cpp  RsBusCodec.hpp  RsBusDefs.hpp  RsBusFsm.cpp  RsBusServer.cpp
src/app/common/cli/: Cli.cpp  Cli.hpp  CmdProcessor.cpp  TelnetPrinter.hpp  TelnetServer.cpp  TelnetServer.hpp
src/app/common/cli/cmds/: Cmd.hpp  CmdArg.hpp  CmdArgStatsType.hpp  CmdDefs.hpp  CmdExit.cpp  CmdExit.hpp  CmdLog.cpp  CmdLog.hpp  CmdParamFormater.cpp  CmdParamFormater.hpp  CmdShutdown.hpp  CmdStats.cpp  CmdStats.hpp  CmdStatsFormater.hpp
src/app/common/serial/: SerialPort.hpp  SerialPortFile.cpp  SerialPortFile.hpp  SerialPortRl.cpp  SerialPortRl.hpp
src/app/common/sm/: Client.hpp  ClientFsm.cpp  ClientFsm.hpp  ServerFsm.cpp  ServerFsm.hpp
src/app/common/sockets/: LinkAcceptorRl.cpp  LinkAcceptorRl.hpp  LinkPool.cpp  LinkPool.hpp  LinkRl.hpp
src/app/common/types/: AppError.hpp  IpAddr.hpp  ParamsDefs.hpp
src/app/common/utils/: Buffer.hpp  Logger.cpp  Logger.hpp  ParamParser.cpp  ParamParser.hpp  Queue.hpp  TickUtils.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp  WrapBuffer.hpp
src/app/ttyg/: CMakeLists.txt  TtyGate.cpp  TtyGate.hpp  ttyg.pro  ttyg_main.cpp
src/app/version/: SpGateConfig.hpp
src/tests/: BusGateTest.cpp  CMakeLists.txt  CmdParamParserTest.cpp  ModbusServerTest.cpp  ParamParserTest.cpp  SpBusClientTest.cpp  UtilsTest.cpp
tests/: BusGateTest.cpp  CMakeLists.txt  GateSpBusTest.cpp  ModbusServerTest.cpp  ParamParserTest.cpp  SpGateTest.cpp  SpNetTest.cpp
tests/mocks/: MockFeProcessor.hpp  MockSerialPort.hpp  MockTagAccessor.hpp
